Implement responsive navigation and toggle functionality

--- a/index.html
+++ b/index.html
@@ -199,4 +199,5 @@
       <a href="mailto:contact@fungifinders.com">contact@fungifinders.com</a>
     </footer>
   </body>
+  <script src="./script.js"></script>r
 </html>
