--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
   </head>
   <body>
+    <a class="skip-to-main" href="#main">Skip to main content</a>
     <header class="site-header">
       <div class="wrapper">
         <div class="site-header__inner">
@@ -33,7 +34,7 @@
       </div>
     </header>
 
-    <main>
+    <main id="main">
       <section class="hero section flow" data-padding="compact">
         <div class="wrapper">
           <h1 class="hero__title">
