--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <img src="./assets/hamburger.svg" alt="" />
           </button>
           <nav id="primary-nav" class="primary-navigation">
-            <ul>
+            <ul role="list">
               <li><a href="#">Discover</a></li>
-              <li><a href="#">Mushroom Guide</a></li>
-              <li><a href="#">FAQ</a></li>
+              <li><a href="./guide.html">Mushroom Guide</a></li>
+              <li><a href="./guide.html#faq">FAQ</a></li>
             </ul>
           </nav>
         </div>
@@ -200,5 +200,5 @@
       <a href="mailto:contact@fungifinders.com">contact@fungifinders.com</a>
     </footer>
   </body>
-  <script src="./script.js"></script>r
+  <script src="./script.js"></script>
 </html>
